# redmine-mcp-server

./: .env.docker  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  roadmap.md  server.json
.github/workflows/: deploy.yml  pr-tests.yml   prepare-environment.yml
docs/: contributing.md  oauth-setup.md  tool-reference.md  troubleshooting.md
iac/ansible/: add_docker_group.yml  install_docker.yml  install_docker_compose.yml
scripts/: release.py
src/redmine_mcp_server/: main.py  oauth_middleware.py  redmine_handler.py
tests/: test_connection.py  test_enumerations.py  test_global_search.py  test_integration.py  test_issue_to_dict_selective.py  test_list_project_issue_custom_fields.py  test_list_redmine_issues.py  test_list_redmine_versions.py  test_main.py  test_oauth_middleware.py  test_project_members.py  test_prompt_injection.py  test_read_only_mode.py  test_redmine_handler.py  test_ssl_integration.py  test_time_entries.py  test_wiki_editing.py
